crates/reinhardt-core/macros/tests/ui/hook/fail/hook_invalid_target.rs
use reinhardt_macros::hook;

#[hook(on = invalid_target)]
struct MyHook;

fn main() {}
